--- a/src/index.css
+++ b/src/index.css
@@ -10,21 +10,59 @@
 
 body{
   font-family: 'Poppins', sans-serif;
-  background-color: #f5f5f5;
+  background-color: #f3f3f3 !important;
 }
-main{
+.main{
   width: 100%;
   min-height: 100vh;
   max-width: var(--w-max);
   margin: 0 auto;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
 }
+
 .viewer{
   width: 100%;
-  height: 90vh;
+  height: 80vh;
   background: white;
-  border-radius: 10px;
-  border: 2px solid #f5f5f5;
+}
+.header{
+  width: 100%;
+  height: 8vh;
+  background: white;
+  padding: 0 2rem;
+}
+.header > div{
+  display: flex !important;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+.header > div > div{
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.header .actions{
+  display: flex;
+  gap: 1rem;
+}
+.flexRow{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+}
+input[type="color"]{
+  cursor: pointer;
+}
+.spinner-container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
